# security-moment

labs/lab_1/: README.md
labs/lab_1/task_11/: CMakeLists.txt  Main  README.md  input.txt  output.txt
labs/lab_1/task_11/src/Commander/: Commander.h
labs/lab_1/task_11/src/RleCompressor/: RleCompressor.h
labs/lab_1/task_7/: .gitignore  CMakeLists.txt  Main  README.md  input.txt  output.txt
labs/lab_10/: justfile
labs/lab_10/report/: REPORT.md
labs/lab_10/terraform/: id_key  main.tf  terraform.tfstate  terraform.tfstate.backup
labs/lab_2/: README.md
labs/lab_2/task_3/: CMakeLists.txt  README.md  input.txt  output.txt
labs/lab_2/task_3/resources/: commands.txt  input.txt  output.txt
labs/lab_2/task_3/src/: main.cpp
labs/lab_2/task_3/src/Commander/: Commander.cpp  Commander.h  splitString.cpp
labs/lab_2/task_3/src/HRUModel/: HRUModel.cpp  HRURelation.cpp  HRURightEnum.cpp  copyIf.cpp
labs/lab_2/task_3/src/HRUView/: HRUView.cpp
labs/lab_2/task_3/test/HRUModel/: HRUModel.cpp  HRUModelTest.cpp
labs/lab_2/task_8/: .gitignore  CMakeLists.txt  README.md
labs/lab_2/task_8/resources/: input.txt
labs/lab_2/task_8/resources/output/: 595599873.txt  948069122.txt
labs/lab_2/task_8/src/: main.cpp
labs/lab_2/task_8/src/Commander/: Commander.cpp
labs/lab_2/task_8/src/TGIslandsGenerator/: TGIslandsGenerator.cpp
labs/lab_2/task_8/src/TGModel/: TGModel.cpp  TGRelation.cpp  TGRightEnum.cpp
labs/lab_2/task_8/src/TGView/: TGView.cpp
labs/lab_2/task_8/src/Utils/: Utils.cpp
labs/lab_3/report/: REPORT.md
labs/lab_3/terraform/: main.tf  terraform.tfstate  terraform.tfstate.backup  vars.encrypted.tfvars
labs/lab_4/: justfile
labs/lab_4/report/: REPORT.md
labs/lab_4/terraform/: main.tf  terraform.tfstate  terraform.tfstate.backup
labs/lab_5/report/: REPORT.md
labs/lab_5/terraform/: .gitignore  main.tf  terraform.tfstate  terraform.tfstate.backup
labs/lab_6/: justfile
labs/lab_6/report/: REPORT.md
labs/lab_6/terraform/: main.tf  (+2 more)
labs/lab_7/: ans-deploy-lb.sh  ans-deploy-regular.sh  justfile
labs/lab_8/: ans-deploy-first.sh  justfile
labs/lab_9/: ans.sh  justfile
(+65 files in other folders)
